--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -123,7 +123,7 @@
       </select>
       <br>
       <br>
-      <label for="language">Familier in:</label>
+      <label for="language">Familiar in:</label>
       <span class="ch">
         <input type="checkbox" name="lanugage" value="HTML" id="ch-1">
         <label for="HTML"><span class="ch-text">HTML</span></label>
@@ -135,8 +135,12 @@
       <br>
       <br>
       <div class="tetxarea">
-        <label for="feedback">Comment:</label>
-        <textarea name="feedback" rows="10" cols="30" placeholder="Your feedback" id="feedback"></textarea>
+        <div class="col-1">
+          <label for="feedback">Comment:</label>
+        </div>
+        <div class="col-2">
+          <textarea name="feedback" rows="10" cols="30" placeholder="Your feedback" id="feedback"></textarea>
+        </div>
       </div>
       <br>
       <div class="s-r">
