--- a/task01/index.html
+++ b/task01/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="Roboto-font">
+<body>
   <header>
     <div>
       <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png"
@@ -33,10 +33,12 @@
 
   <div class="intro">
     <div class="home-p">
+
+
+      <h1 class="home-h">HOME</h1>
+
       <p>
-        <span class="home-h">HOME</span>
-        <br>
-        <br>
+        
         HTML markup consists of several key components, including those called tags (and their attributes),
         character-based data types, character refernce and entity refernces. HTML tags most commonly come in
         pairs like <span class="tags"><tt><b>&lt;h1&gt;</b></tt></span> and <span
@@ -61,7 +63,8 @@
             Sample Table
           </div>
           <div class="t-description">
-            Following table uses <span class="tags"><tt>colspan</tt></span> and <span class="tags"><tt>rowspan</tt></span>
+            Following table uses <span class="tags"><tt>colspan</tt></span> and <span
+              class="tags"><tt>rowspan</tt></span>
             attributes inside <span class="tags"><tt>&lt;td&gt;</tt></span> to
             merge two or more cells
           </div>
@@ -110,16 +113,16 @@
           </td>
           <td>Game Development</td>
           <td>Cognitive Robotics</td>
-          </tr>
+        </tr>
 
-          <tr>
-            <td>3.00 p.m - 5.00 p.m</td>
-            <td>Programming Using C</td>
-            <td>Management</td>
-            <td>Philosophy of Science</td>
-          </tr>
+        <tr>
+          <td>3.00 p.m - 5.00 p.m</td>
+          <td>Programming Using C</td>
+          <td>Management</td>
+          <td>Philosophy of Science</td>
+        </tr>
 
-          </tr:nth-child>
+        </tr:nth-child>
       </table>
     </div>
   </section>
