--- a/task01/whyhtml.html
+++ b/task01/whyhtml.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="Roboto-font">
+<body>
   <header>
     <div>
       <a href="https://www.facebook.com/ReidConUCSC" target="_blank"><img class="logo" src="Images/logo.png"
